# Combat-Robot-Autonomy

./: README.md
Components/Planning/code/: CMakeLists.txt  CollisionChecking.cpp  CollisionChecking.h  RG-RRT.cpp  RG-RRT.h  dynamics.cpp  dynamics.h  housebots.txt  obstacles.txt  opponents.txt  simulation.cpp  visualization.py
Components/Planning/code/robot_data/: Double_Stuffed.txt  Very_Original.txt
Components/Planning/report/: .description.tex.swp  description.tex
Components/Planning/report/InterimPresentation/: .InterimPaper.tex.swp  FinalPresentation.tex  InterimPaper.tex
